# 7qing_os

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Cmakelists.txt  Readme.md  boot.lst  compile_commands.json  makefile  run.sh
.cache/clangd/index/: bootstrap.S.FC9520A9CE3A9752.idx  entry64.S.7DD22DBEEE15C78F.idx  io.S.817339A095D5070F.idx  kernel.c.FF20CF7C95ED30F5.idx  map.h.745A8A8FD9246C34.idx  multiboot2.h.E949CFA6BA84763F.idx
doc/src/: makefile
doc/src/idt/: idt.asm  idt.h
doc/src/include/: config.h  status.h
doc/src/io/: io.h
doc/src/kernel/: kernel.c  kernel.h
doc/src/memory/: memory.c  memory.h
doc/src/memory/heap/: kheap.c
doc/src/memory/paging/: paging.asm  paging.c
his/: makefile
log/day1/: boot.asm
log/day1/src2/: CmakeLists.txt
log/day1/src2/kernel/: CmakeLists.txt
run-ovmf/: start.sh
scripts/: comp.sh  start_qemu.sh
src/: CMakeLists.txt  Cmakelists.txt  linker.ld  makefile
src/boot/: CMakeLists.txt  boot.asm  bootstrap.S  entry64.S
src/idt/: idt.asm  idt.c  idt.h
src/include/: config.h  io.h
src/include/7qingos/: error.h
src/include/memory/: map.h
src/io/: io.S  io.asm
src/kernel/: CMakeLists.txt  CmakeLists.txt  Cmakelists.txt  kernel.S  kernel.asm  kernel.c  linker.ld  linker.lds  main.c
src/memory/: map.c  memory.h
src/memory/heap/: heap.c  heap.h  kheap.c  kheap.h
src/memory/paging/: paging.asm  paging.c  paging.h
target2/scripts/: start.sh
