# src/kernel/CMakeLists.txt

# 定义 C 源文件
# set(KERNEL_C_SRC main.c)

# # 编译为静态库
# add_library(kernel_lib STATIC ${KERNEL_C_SRC})

# # 设置 include 路径
# target_include_directories(kernel_lib PUBLIC ${CMAKE_SOURCE_DIR}/src/kernel/include)

# # 链接库文件到 kernel_target
# add_dependencies(kernel_lib kernel_target)

